--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
         </div>
         <div class="bottomPanel">
                 <div class="rememb">
-                    <input type="checkbox">
+                    <input class="checkbox" type="checkbox">
                     <p>Запам’ятати мене</p>
                 </div>
                 <a class="forget" href="#">Забув пароль?</a>
+        </div>
+        <div class="btn2">
+            <button class="button2">Вхід</button>
         </div>
     </div>
 </body>
