--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         <div class="btn2">
             <button class="button2">Вхід</button>
         </div>
+        <div class="newAcc">
+            <p>Ще немає аккаунта?</p>
+            <a class="Reg" href="#">Зарегеструватися</a>
+        </div>
+        <p class="Lg2">Або війдіть через</p>
+        <div class="internet">
+            <img src="./static/img/социалки.png" alt="социалки">
+        </div>
     </div>
 </body>
 </html>
